overflow fix

--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,13 @@
   src: url('./assets/fonts/inter-regular.ttf') format('truetype')
 }
 
+.root {
+  position: relative;
+  width: 100vw;
+  height: 100vh;
+  overflow-x: hidden;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
